# svirpti

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
smt/: Cargo.toml
smt/src/: lib.rs  verify.rs
smt/src/solvers/: errors.rs  mod.rs  z3_smt2.rs
svirpti/: Cargo.toml
svirpti/src/: context.rs  errors.rs  lib.rs  verification_result.rs
svirpti/src/lower/: expression.rs  generic_expression.rs  mod.rs  program.rs  smt_context.rs
svirpti/src/wp/: encode_wp.rs  expression.rs  mod.rs  verification_result.rs
svirpti/tests/: errors.rs  simple.rs
svirpti/tests/snapshots/: errors__labels_paper_example-2.snap  errors__labels_paper_example.snap  simple__check_assign_encoding-2.snap  simple__check_assign_encoding-3.snap  simple__check_assign_encoding-4.snap  simple__check_assign_encoding.snap  simple__check_assume_encoding-2.snap  simple__check_assume_encoding-3.snap  simple__check_assume_encoding-4.snap  simple__check_assume_encoding.snap  simple__check_multiple_errors-2.snap  simple__check_multiple_errors-3.snap  simple__check_multiple_errors-4.snap  simple__check_multiple_errors.snap  simple__check_non_deterministic_choice_encoding-2.snap  simple__check_non_deterministic_choice_encoding-3.snap  simple__check_non_deterministic_choice_encoding-4.snap  simple__check_non_deterministic_choice_encoding.snap  simple__check_non_deterministic_choice_encoding2-2.snap  simple__check_non_deterministic_choice_encoding2-3.snap  simple__check_non_deterministic_choice_encoding2-4.snap  simple__check_non_deterministic_choice_encoding2.snap  simple__check_sequence_encoding-2.snap  simple__check_sequence_encoding-3.snap  simple__check_sequence_encoding-4.snap  simple__check_sequence_encoding.snap  (+4 more)
vir/: Cargo.toml  (+1 more)
vir-derive/: Cargo.toml
vir-derive/src/: lib.rs
vir-derive/tests/: high_parser.rs
(+52 files in other folders)
