[package]
name = "svirpti-vir-derive"
version = "0.1.0"
authors = ["Vytautas Astrauskas <vastrauskas@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A procedural macro for writing VIR fragments."
repository = "https://github.com/vakaras/svirpti"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "fold", "parsing", "derive"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
svirpti-vir = { path = "../vir" }

[dev-dependencies]
trybuild = "1.0"
insta = "1.5.2"